# FlightStrips

./: .gitattributes  .gitignore  .release-please-config.json  .release-please-manifest.json  CLAUDE.md  README.md  docker-compose.observability.dev.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yaml  events.md
euroscope-plugin/src/loader/: CMakeLists.txt  Loader.cpp  Loader.h  dllmain.cpp
euroscope-plugin/src/loader/pch/: pch.h
euroscope-plugin/src/plugin/: CMakeLists.txt  Constants.h  Logger.cpp  Logger.h
euroscope-plugin/src/plugin/authentication/: AuthenticationRedirectListener.cpp  AuthenticationRedirectListener.h  AuthenticationService.cpp  AuthenticationService.h  IAuthenticationService.h
euroscope-plugin/src/plugin/bootstrap/: Container.cpp  Container.h  InitializePlugin.cpp  InitializePlugin.h  dllmain.cpp
euroscope-plugin/src/plugin/configuration/: AppConfig.cpp  AppConfig.h  Config.cpp  Config.h  ConfigurationBootstrapper.cpp  ConfigurationBootstrapper.h  UserConfig.cpp  UserConfig.h
euroscope-plugin/src/plugin/controller/: Controller.h  ControllerService.cpp  ControllerService.h
euroscope-plugin/src/plugin/euroscope/: EuroScopeCControllerInterface.h  EuroScopeCFlightPlanInterface.h  EuroScopeCFlightPlanWrapper.h  EuroScopeCRadarTargetInterface.h  JsonConversion.h  JsonConversion.hpp
euroscope-plugin/src/plugin/filesystem/: FileSystem.cpp  FileSystem.h
euroscope-plugin/src/plugin/flightplan/: AirlineCallsignService.cpp  AirlineCallsignService.h  FlightPlan.h  FlightPlanBootstrapper.cpp  FlightPlanBootstrapper.h  FlightPlanService.cpp  FlightPlanService.h  RouteService.cpp  RouteService.h
euroscope-plugin/src/plugin/graphics/: Colors.h  Graphics.cpp  Graphics.h  InfoPanel.cpp  InfoPanel.h  InfoScreen.cpp  InfoScreen.h  InfoScreenObjectIds.h  PdcClearancePopupState.h  PdcPopup.cpp  PdcPopup.h
euroscope-plugin/src/plugin/handlers/: AirportRunwaysChangedEvent.h  AirportRunwaysChangedEventHandlers.cpp  AirportRunwaysChangedEventHandlers.h  AuthenticationEventHandler.h  AuthenticationEventHandlers.cpp  AuthenticationEventHandlers.h  ConnectionEventHandler.h  ConnectionEventHandlers.cpp  ConnectionEventHandlers.h  ControllerEventHandler.h  ControllerEventHandlers.cpp  ControllerEventHandlers.h  FlightPlanEventHandler.h  FlightPlanEventHandlers.cpp  FlightPlanEventHandlers.h  MessageHandler.h  MessageHandlers.cpp  MessageHandlers.h  RadarTargetEventHandler.h  RadarTargetEventHandlers.cpp  RadarTargetEventHandlers.h  TimedEventHandler.h  TimedEventHandlers.cpp  TimedEventHandlers.h
euroscope-plugin/src/plugin/http/: Http.cpp  Http.h
euroscope-plugin/src/plugin/messages/: CdmReadyTrigger.cpp  CdmReadyTrigger.h  MessageService.cpp  MessageService.h  PrivateMessageSender.cpp  PrivateMessageSender.h
euroscope-plugin/src/plugin/network/: ConnectedClient.cpp  ConnectedClient.h  FlightStripsClient.cpp  FlightStripsClient.h  MessageHandler.cpp  MessageHandler.h  NetworkBootstrapper.cpp  NetworkBootstrapper.h  NetworkService.cpp  NetworkService.h  Server.cpp  Server.h
euroscope-plugin/src/plugin/pch/: pch.h
euroscope-plugin/src/plugin/plugin/: AirportResolution.cpp  AirportResolution.h  FlightStripsPlugin.cpp  FlightStripsPlugin.h  FlightStripsPluginInterface.h  IFlightStripsPlugin.h  Version.h.in
euroscope-plugin/src/plugin/runway/: ActiveRunway.h  RunwayService.cpp  RunwayService.h
euroscope-plugin/src/plugin/stands/: Stand.cpp  Stand.h  StandService.cpp  StandService.h  StandsBootstrapper.cpp  StandsBootstrapper.h
euroscope-plugin/src/plugin/tag_items/: CdmStateHandler.cpp  CdmStateHandler.h  ClearanceStatusHandler.cpp  ClearanceStatusHandler.h  DeIceHandler.cpp  DeIceHandler.h  PdcStateHandler.cpp  PdcStateHandler.h  TagItemHandler.h  TagItemHandlers.cpp  TagItemHandlers.h
euroscope-plugin/src/plugin/websocket/: Events.h  IWebSocketClient.h  WebSocket.cpp  WebSocket.h  WebSocketService.cpp  WebSocketService.h
euroscope-plugin/src/util/: CMakeLists.txt  ExceptionHandling.cpp  ExceptionHandling.h  Logger.hpp
euroscope-plugin/src/util/filesystem/: FileSystem.cpp  FileSystem.h
euroscope-plugin/src/util/http/: Http.cpp  Http.h  IHttpClient.h
euroscope-plugin/src/util/network/: LocalIpAddress.cpp  LocalIpAddress.h
euroscope-plugin/src/util/pch/: pch.h
euroscope-plugin/test/plugin/: AuthenticationServiceTest.cpp  CMakeLists.txt  RouteServiceTest.cpp  doctest.cpp
euroscope-plugin/test/plugin/authentication/: AuthenticationServiceTest.cpp
euroscope-plugin/test/plugin/configuration/: AppConfigTest.cpp  UserConfigTest.cpp
euroscope-plugin/test/plugin/controller/: ControllerServiceTest.cpp
euroscope-plugin/test/plugin/flightplan/: AirlineCallsignServiceTest.cpp  FlightPlanServiceTest.cpp  RouteServiceTest.cpp
euroscope-plugin/test/plugin/graphics/: InfoPanelTest.cpp  PdcPopupTest.cpp
euroscope-plugin/test/plugin/handlers/: AirportRunwaysChangedEventHandlersTest.cpp  AuthenticationEventHandlersTest.cpp  ConnectionEventHandlersTest.cpp  ControllerEventHandlersTest.cpp  FlightPlanEventHandlersTest.cpp  MessageHandlersTest.cpp  RadarTargetEventHandlersTest.cpp  TimedEventHandlersTest.cpp
euroscope-plugin/test/plugin/messages/: CdmReadyTriggerTest.cpp  MessageServiceTest.cpp
euroscope-plugin/test/plugin/mock/: MockAirportRunwaysChangedEventHandler.h  MockAuthenticationEventHandler.h  MockAuthenticationService.h  MockConnectionEventHandler.h  MockControllerEventHandler.h  MockEuroScopeCController.h  MockEuroScopeCFlightPlan.h  MockEuroScopeCRadarTarget.h  MockFlightPlanEventHandler.h  MockFlightStripsPlugin.h  MockHttpClient.h  MockMessageHandler.h  MockRadarTargetEventHandler.h  MockTimedEventHandler.h  MockWebSocketClient.h
euroscope-plugin/test/plugin/network/: LocalIpAddressTest.cpp
euroscope-plugin/test/plugin/plugin/: AirportResolutionTest.cpp  LookupAuditTest.cpp
euroscope-plugin/test/plugin/runway/: RunwayServiceTest.cpp
euroscope-plugin/test/plugin/stands/: StandServiceTest.cpp  StandTest.cpp
euroscope-plugin/test/plugin/tag_items/: CdmStateHandlerTest.cpp  ClearanceStatusHandlerTest.cpp  (+2 more)
(+1537 files in other folders)
